<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView
                android:id="@+id/recipe_image_container"
                android:layout_width="160dp"
                android:layout_height="200dp"
                app:cardUseCompatPadding="true" >

                <ImageView
                    android:id="@+id/recipe_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic"
                    android:contentDescription="@string/recipe_image" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/recipe_info_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/recipe_image_container"
                app:layout_constraintStart_toEndOf="@id/recipe_image_container"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:id="@+id/name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_title"
                    android:ellipsize="end"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:maxLines="3"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/servings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/servings_label"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/servings_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/placeholder_servings"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/ingredients_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_label"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/ingredients_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/placeholder_ingredients"
                    android:maxLines="3"
                    android:ellipsize="end"/>

            </LinearLayout>

            <TextView
                android:id="@+id/label_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recipe_image_container"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/steps_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/steps_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_steps"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_step"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favorite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_star"
            app:fabSize="normal"/>

    </android.support.design.widget.CoordinatorLayout>

</layout>