<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.StepDetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.BakingApp.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"/>

        <TextView
            android:id="@+id/label_video_not_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:visibility="gone"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/label_video_not_available"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/label_step_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playerView"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="8dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/step_detail_label"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark" />

        <ScrollView
            android:id="@+id/step_detail_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/label_step_detail"
            app:layout_constraintBottom_toTopOf="@id/prev_step_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="8dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/step_detail_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@tools:sample/lorem/random"
                android:textSize="17sp"
                android:textColor="@color/secondary_text" />

        </ScrollView>

        <ImageView
            android:id="@+id/prev_step_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/horizontal_middle"
            android:contentDescription="@string/next_step"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_arrow_back"/>

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/darker_gray"
            app:layout_constraintGuide_percent="0.5"/>

        <ImageView
            android:id="@+id/next_step_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/horizontal_middle"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/prev_step"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_arrow_forward"/>

    </android.support.constraint.ConstraintLayout>

</layout>